--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@nuxt/icon": "^1.9.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vuelidate/core": "^2.0.3",
