--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "nuxt": "^3.14.1592",
+    "sass-loader": "^16.0.3",
     "nuxt-swiper": "^2.0.0",
     "swiper": "^11.1.15",
     "vue": "latest",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+     "sass": "^1.81.0",
     "tailwindcss": "^3.4.16"
   }
 }
