--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
     "@nuxt/icon": "^1.9.0",
+    "@nuxt/ui": "^2.19.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@pinia/nuxt": "^0.9.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "nuxt": "^3.14.1592",
-    "sass-loader": "^16.0.3",
     "nuxt-swiper": "^2.0.0",
+    "pinia": "^2.3.0",
+    "sass-loader": "^16.0.3",
     "swiper": "^11.1.15",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-slider-component": "^3.2.24",
+    "vue3-slider": "^1.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-     "sass": "^1.81.0",
+    "sass": "^1.81.0",
     "tailwindcss": "^3.4.16"
   }
 }
