--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
     "@nuxt/icon": "^1.9.0",
-    "@nuxt/ui": "^2.19.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "nouislider": "^15.8.1",
     "nuxt": "^3.14.1592",
     "nuxt-swiper": "^2.0.0",
     "pinia": "^2.3.0",
