--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
           lftp -c "
           set ssl:verify-certificate no;
           open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER;
-          mirror -R --delete ./.output/public/ /www/autocarmsk.ru/;
+          mirror -R ./.output/public/ /www/autocarmsk.ru/;
           quit"
