--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fancyapps/ui": "^5.0.36",
     "@nuxt/content": "^2.13.4",
     "@nuxt/icon": "^1.9.0",
+    "@nuxtjs/seo": "^2.0.2",
+    "@nuxtjs/sitemap": "^7.0.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
     "@vuelidate/core": "^2.0.3",
