--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nouislider": "^15.8.1",
     "nuxt": "^3.14.1592",
     "nuxt-swiper": "^2.0.0",
+    "nuxt-yandex-metrika": "^1.2.9",
     "pinia": "^2.3.0",
     "puppeteer": "^23.10.2",
     "sass-loader": "^16.0.3",
