--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,44 @@
+# name: Deploy Vue to WordPress
+
+# on:
+#   push:
+#     branches:
+#       - master # Укажите ветку, на которую нужно настраивать деплой, например, main или master.
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3 # Используем последнюю версию checkout action
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: "20" # Укажите нужную версию Node.js
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Build project
+#         run: npm run generate
+
+#       - name: Install lftp
+#         run: sudo apt-get update && sudo apt-get install -y lftp
+
+#       - name: Deploy
+#         env:
+#           FTP_SERVER: ${{ secrets.FTP_SERVER }}
+#           FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+#           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+#         run: |
+#           lftp -c "
+#           set ssl:verify-certificate no;
+#           open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER;
+#           # mirror -R ./.output/public/ /www/autocarmsk.ru/;
+#           quit"
+
 name: Deploy Vue to WordPress
 
 on:
@@ -22,7 +63,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm run generate
+        run: npm run build # Если используется другая команда для сборки, замените её
 
       - name: Install lftp
         run: sudo apt-get update && sudo apt-get install -y lftp
@@ -36,5 +77,5 @@ jobs:
           lftp -c "
           set ssl:verify-certificate no;
           open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER;
-          # mirror -R ./.output/public/ /www/autocarmsk.ru/;
+          mirror -R ./dist/ /www/autocarmsk.ru/; # Укажите точный путь к папке на сервере
           quit"
