--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,5 +77,5 @@ jobs:
           lftp -c "
           set ssl:verify-certificate no;
           open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER;
-          mirror -R ./dist/ /www/autocarmsk.ru/; # Укажите точный путь к папке на сервере
+          mirror -R ./dist/ /www/autocarmsk.ru/;
           quit"
